5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4012/executions/1756_1576.log
== TEST (2019-05-21 17:57:18) 
-- CODE:
v1 = int(input("v1: "))
v2 = int(input("v2: "))

while ((v1 == 22 or v1 == 11) and (v2 == 33)):
	print("EUSAPIA")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    v1 = int(input())
ValueError: invalid literal for int() with base 10: '[33,22,33,22,11,11,33,22,11,11,22,33]'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 13:31:22) 
-- CODE:
from numpy import *

ve = int(input("v1: "))
vb = int(input("v2: "))
cont = 0
We = 0
Wb = 0
print(size(ve))
while cont < size(ve):
	

	
-- ERROR:
File "XXXX", line 13
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 13:31:37) 
-- CODE:
from numpy import *

ve = int(input("v1: "))
vb = int(input("v2: "))
cont = 0
We = 0
Wb = 0
print(size(ve))
#while cont < size(ve):
	

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 13:32:13) 
-- CODE:
from numpy import *

ve = int(input("v1: "))
vb = int(input("v2: "))
cont = 0
We = 0
Wb = 0
print(size(ve))
#while cont < size(ve):
	

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 13:33:21) 
-- CODE:
from numpy import *

ve = array(eval(input("v1: ")))
vb = array(eval(input("v2: ")))
cont = 0
We = 0
Wb = 0
print(size(ve))
#while cont < size(ve):
	

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 13:42:42) 
-- CODE:
from numpy import *

ve = array(eval(input("v1: ")))
vb = array(eval(input("v2: ")))
cont = 0
We = 0
Wb = 0
while cont < size(ve):
	if ve[cont] == 11:
		if vb[cont] == 22:
			Wb = Wb + 1
		elif vb[cont] == 33:
			We = We + 1
	elif ve[cont] == 22:
		if vb[cont]== 33:
			Wb = Wb + 1
		elif vb[cont] == 11:
			We = We + 1
	else:
		if vb[cont]== 11:
			Wb = Wb + 1
		elif vb[cont] == 22:
			We = We + 1
	cont = cont + 1
print(cont)
if We > Wb:
	print("EUSAPIA")
elif We < Wb:
	print("BARSANULFO")
elif We == Wb:
	print("EMPATE")

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-26 13:43:05) 
-- CODE:
from numpy import *

ve = array(eval(input("v1: ")))
vb = array(eval(input("v2: ")))
cont = 0
We = 0
Wb = 0
while cont < size(ve):
	if ve[cont] == 11:
		if vb[cont] == 22:
			Wb = Wb + 1
		elif vb[cont] == 33:
			We = We + 1
	elif ve[cont] == 22:
		if vb[cont]== 33:
			Wb = Wb + 1
		elif vb[cont] == 11:
			We = We + 1
	else:
		if vb[cont]== 11:
			Wb = Wb + 1
		elif vb[cont] == 22:
			We = We + 1
	cont = cont + 1
print(cont)
if We > Wb:
	print("EUSAPIA")
elif We < Wb:
	print("BARSANULFO")
elif We == Wb:
	print("EMPATE")

	
-- EXECUTION TIME:
0.529169
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
BARSANULFO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
